[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/maintheme.tres" type="Theme" id=1]
[ext_resource path="res://menu/mainmenu.gd" type="Script" id=3]
[ext_resource path="res://menu/selectarrow.png" type="Texture" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 252.0
margin_top = 261.0
margin_right = 648.0
margin_bottom = 763.0
custom_constants/separation = 260

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer2"]
margin_right = 396.0
margin_bottom = 54.0
text = "Igrica nasa lepa"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
margin_left = 131.0
margin_top = 314.0
margin_right = 265.0
margin_bottom = 502.0
size_flags_horizontal = 4
custom_constants/separation = 32

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_right = 134.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 67, 39 )
mouse_filter = 2
text = "play"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 110.0
margin_right = 134.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 67, 39 )
mouse_filter = 2
text = "quit"

[node name="Selection" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 627.0
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Selection"]
margin_left = -127.0
margin_top = -20.0
margin_bottom = 20.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="Selection"]
margin_left = 94.0
margin_top = -20.0
margin_bottom = 20.0
texture = ExtResource( 4 )
flip_h = true

[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Button2" to="." method="_on_quit_pressed"]
